params: Add option to disable safety filter
